--- a/pkg/arch/PKGBUILD
+++ b/pkg/arch/PKGBUILD
@@ -11,7 +11,7 @@ arch=('x86_64')
 url="https://github.com/otreblan/aru-web"
 license=('GPL3')
 groups=()
-depends=('gcc-libs')
+depends=('gcc-libs' 'drogon')
 makedepends=('git' 'asciidoctor' 'cmake' 'bash-completion')
 checkdepends=()
 optdepends=()
