--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
     - uses: ammaraskar/gcc-problem-matcher@master
 
     - name: deps
-      run: sudo apt install asciidoctor bash-completion
+      run: sudo apt install asciidoctor bash-completion libdrogon-dev
 
     - name: configure
       run: cmake -B build
@@ -39,35 +39,3 @@ jobs:
       with:
         name: ubuntu_package
         path: build/*.deb
-
-  arch-linux:
-    runs-on: ubuntu-latest
-    container: archlinux:base-devel
-
-    steps:
-    - uses: ammaraskar/gcc-problem-matcher@master
-    - name: Build user
-      run: |
-          USER=ab
-          useradd "$USER"
-          echo "$USER ALL=(ALL) NOPASSWD: /usr/bin/pacman" >> "/etc/sudoers.d/$USER-no-password"
-
-    - run: pacman -Syu --noconfirm git
-
-    - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
-
-    - run: chown --recursive ab ./
-
-    - name: makepkg
-      working-directory: ./pkg/arch
-      run: |
-        export MAKEFLAGS=-j$(nproc)
-        export PKGDEST=./
-        sudo -Eu ab makepkg -s --noconfirm
-
-    - uses: actions/upload-artifact@v4
-      with:
-        name: arch_package
-        path: pkg/arch/*.pkg.tar.*
